<resources>
    <string name="app_name">Mistertix</string>
    <string name="title_home">Whats On</string>
    <string name="title_dashboard">Movies</string>
    <string name="title_notifications">Foods</string>
    <string name="title_profile">My Account</string>


    <string name="movie_Standerd">Standard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="myacoount_Title">LOGIN OR SIGN-UP</string>
    <string name="myacoount_poits1"> Earn points to redeem on free trips to the movies!</string>
    <string name="myacoount_poits2"> Access to exclusive advance screenings</string>
    <string name="myacoount_poits3"> Special offers and promotions</string>
    <string name="myacoount_Title_main">Love Movies? Us too! With SHARE you can earn points everytime you go to the cinema to use on FREE movie tickets!</string>

    <string name="signin_Title">Log in to Your Account</string>
    <string name="signin_Email">Email or Phone Number</string>
    <string name="signin_Password">Password</string>
    <string name="signin_ForgetPassword">Forgot your password?</string>
    <string name="signin_button">Log in</string>

    <string name="signup_title">CREATE AN ACCOUNT</string>
    <string name="signup_radiob1">Mr</string>
    <string name="signup_radiob2">Mrs</string>
    <string name="signup_radiob3">Miss/Ms</string>
    <string name="signup_agree_switch">I agree to the Terms and Conditions and have read and understood the PrivacyNotice</string>

    <string name="movies">MOVIES</string>
    <string name="movies_showing">Now Showing</string>
    <string name="movies_showing2">Coming Soon</string>
    <string name="carousel_text">BOOK TICKETS</string>



    <string name="movies_info">MOVIE INFO</string>
    <string name="movies_info_genre">Genre :</string>
    <string name="movies_info_release_date">Relese Date :</string>
    <string name="movies_info_Starring">Starring :</string>

    <string name="seat_boking">BOOKING</string>
    <string name="seat_boking_price">Price -</string>
    <string name="seat_boking_seat_price"> - 700.00Rs per ticket</string>
    <string name="seat_boking_seat_price_count">0.00Rs</string>
    <string name="title_activity_admin">AdminActivity</string>

    <string name="title_movie_manage_admin">Movies Manage</string>
    <string name="title_dashboard_admin">Dashboard</string>
    <string name="title_payment_admin">Payments</string>


    <string name="fragmnet_movie_admin">Add Movies</string>
    <string name="trailer">Trailer</string>
    <string name="search">Search</string>
    <string name="deleteMovie">Delete Movie</string>

    <string name="contactUs">How Can we help you today?</string>

    <string name="contactUs_text1">If you have an inquiry or would like to share your experience with us, we are here to help. Please contact us using one of the following methods: </string>
    <string name="contactUs_text2">Frequently Asked Question</string>
    <string name="contactUs_text3">If you have a question, we may already have
        the answer</string>
    <string name="contactUs_button">View Our FAQ s</string>
    <string name="contactUs_text4">Call Us</string>
    <string name="contactUs_text5">We did love to hear from you! Please call us on</string>
    <string name="contactUs_text6">+94 37 2295 714</string>
    <string name="contactUs_text7">Our customer support team is available between 10.00AM-12.OOAm-7days a week.</string>
    <string name="contactUs_text8">Say Hello On Social</string>

    <string name="Booking_payment">Your movie awaits,just a few details to record your booking</string>
    <string name="Booking_payment1">Email *</string>
    <string name="Booking_payment2">First Name *</string>
    <string name="Booking_payment3">Last Name *</string>
    <string name="Booking_payment4">Mobile Number *</string>
    <string name="Booking_payment5">* Required field(s)</string>


    <string name="signed_user">GENERAL</string>
    <string name="signed_user_hi">Hi ,</string>
    <string name="signed_user_about">About</string>
    <string name="signed_user_contact_Us">Contact Us</string>
    <string name="signed_user_location">Location</string>
    <string name="signed_user_logout">Logout</string>
    <string name="signed_user_faceId">Use FaceId Log</string>
    <string name="signed_text">© 2025 Mixtertix Cinemas. All rights protected.</string>

    <string name="fragmnet_Upcoming_admin">UpComing Movies</string>
    <string name="fragmnet_movie_admin_text">Add New Movie</string>
    <string name="fragmnet_movie_admin_upcoming">Upcoming Movie</string>
    <string name="fragmnet_movie_admin_delete">Delete Movie</string>
    <string name="admin_dashboard">Total Sales</string>
    <string name="admin_dashboard_movie">Total Movie</string>


    <string name="add_movie_name">Movie Name</string>
    <string name="add_movie_Relese_date">Relese Date</string>
    <string name="add_movie_Language">Language</string>
    <string name="add_movie_Movie_time">Movie Duration</string>
    <string name="add_movie_Discription">Discription</string>
    <string name="add_movie_Image">Image</string>
    <string name="add_movie_YouTubeLink">YouTube Link</string>
    <string name="add_movie_Genare">Movie Genare</string>
    <string name="add_movie_Showtime1">ShowTime 1</string>
    <string name="add_movie_Showtime2">ShowTime 2</string>
    <string name="add_movie_Showtime3">ShowTime 3</string>
    <string name="add_movie_Showtime4">ShowTime 4</string>
    <string name="add_movie_Showtime5">ShowTime 5</string>


</resources>