<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Add_Movie_activity_design"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainDark"
    tools:context=".ui.addMovie.AddMovieActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="#7F0F0F0F"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fragmnet_movie_admin"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addmovie_activity_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center">


            <!-- Movie Name -->

            <!-- Release Date -->

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Select Movie Image"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/movie_image_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_border_3"
                android:scaleType="fitXY"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                tools:srcCompat="@drawable/images" />

            <Button
                android:id="@+id/btn_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#d40e7d"
                android:text="Select Image"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/movie_image_view"
                app:layout_constraintStart_toStartOf="@+id/movie_image_view"
                app:layout_constraintTop_toBottomOf="@+id/movie_image_view" />

            <EditText
                android:id="@+id/movie_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_border"
                android:hint="@string/add_movie_name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_select_image" />

            <EditText
                android:id="@+id/movie_release_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_border"
                android:hint="@string/add_movie_Relese_date"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_name" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Language"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/spinner_language"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_date" />

            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_border"

                app:layout_constraintEnd_toStartOf="@+id/spinner_genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Genre"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/spinner_genre"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_date" />

            <Spinner
                android:id="@+id/spinner_genre"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_border"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spinner_language"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <EditText
                android:id="@+id/movie_Duration"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_border"
                android:hint="@string/add_movie_Movie_time"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_description" />

            <EditText
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_border"
                android:hint="@string/add_movie_Discription"
                android:inputType="textMultiLine"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_language" />

            <EditText
                android:id="@+id/movie_youtube_link"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_border"
                android:hint="@string/add_movie_YouTubeLink"
                android:inputType="textUri"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_Duration" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Showtimes"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_youtube_link" />

            <EditText
                android:id="@+id/showtime1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/rounded_border"
                android:clickable="true"
                android:hint="@string/add_movie_Showtime1"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                app:layout_constraintEnd_toStartOf="@+id/showtime2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <EditText
                android:id="@+id/showtime2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_border"
                android:clickable="true"
                android:hint="@string/add_movie_Showtime2"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                app:layout_constraintEnd_toStartOf="@+id/showtime3"
                app:layout_constraintStart_toEndOf="@+id/showtime1"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <EditText
                android:id="@+id/showtime3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_border"
                android:clickable="true"
                android:hint="@string/add_movie_Showtime3"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/showtime2"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <EditText
                android:id="@+id/showtime4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_border"
                android:clickable="true"
                android:hint="@string/add_movie_Showtime4"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                app:layout_constraintEnd_toStartOf="@+id/showtime5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showtime1" />

            <EditText
                android:id="@+id/showtime5"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_border"
                android:clickable="true"
                android:hint="@string/add_movie_Showtime5"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#888888"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/showtime4"
                app:layout_constraintTop_toBottomOf="@+id/showtime2" />

            <Button
                android:id="@+id/btn_add_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/theme_color"
                android:text="Add Movie"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showtime4" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>